# z3cli

./: .gitignore  README.md  pyproject.toml  requirements.txt
docs/: MODEL_PORTFOLIO_PUBLIC.md  halext-model-lab-draft.md
frontend/: CLAUDE.md  STYLE.md  package-lock.json  package.json  tsconfig.json
frontend/src/: index.tsx  types.d.ts
frontend/src/commands/: index.ts
frontend/src/components/: App.tsx  Markdown.tsx  MessageBubble.tsx  PermissionDialog.tsx  PromptInput.tsx  SettingsPanel.tsx  StatusBar.tsx  StreamingMessage.tsx  TitleBar.tsx  WelcomeBanner.tsx
frontend/src/contexts/: SettingsContext.tsx
frontend/src/hooks/: useAnimatedFrame.ts  useBackend.ts  useSettings.ts
frontend/src/ipc/: backend.ts  protocol.ts
frontend/src/theme/: index.ts
frontend/src/utils/: models.test.ts  models.ts  path.ts
z3cli/: __main__.py
z3cli/app/: backends.py  display.py  repl.py  runtime.py  serve.py  tooling.py
z3cli/core/: config.py  engine.py  router.py  session.py  tool_bridge.py
z3cli/core/tool_adapters/: __init__.py  base.py  din.py  farore.py  hylia.py  majora.py  nayru.py  veran.py
z3cli/protocol/: lmstudio.py  mcp_bridge.py  z3lsp_bridge.py
